--- a/template/index.html
+++ b/template/index.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/css/style1.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/style.css"/>
 
     <link rel="stylesheet" type="text/css" href="/css/grid.css"/>
 
@@ -535,6 +535,11 @@
                            
                         </div>
                     </div>
+                    <div class="c30"></div>
+                    <div class="text-center">
+                        <a href="#" class="btn-seeall"> Xem Tất cả</a>
+                    </div>
+                    <div class="c30"></div>
                 </div>
                 
                 <div class="c20"></div>
@@ -1387,11 +1392,8 @@
                     <div class="service-button-next"><i class="fas fa-chevron-right"></i></div>
                     <div class="service-button-prev"><i class="fas fa-chevron-left"></i></div>
                 </div>
-                <div class="c10"></div>
+              
                 <div class="c30"></div>
-                <div class="text-center">
-                    <a href="#" class="btn-seeall"> Xem Tất cả</a>
-                </div>
                 <div class="c50"></div>
             </div>
             <script>
@@ -1403,7 +1405,10 @@
                         loop: true,
                         slidesPerView: 4,
                         spaceBetween: 20,
-                        autoplay: true,
+                       
+                        autoplay: {
+                            delay: 2000,
+                        },
                         pagination: {
                 
                             clickable: true,
@@ -1438,7 +1443,7 @@
                 });
                 
                 </script>
-            <div class="homenews-wrapper">
+            <!-- <div class="homenews-wrapper">
                 <div class="c50"></div>     
                 <div class="grid">
                      <h2 class="homecat-title">
@@ -1623,7 +1628,7 @@
                 </div>
                 
                 <div class="c50"></div>
-            </div>
+            </div> -->
         </div>
 
         <!-- footer -->
@@ -1643,34 +1648,15 @@
                               
                                 <div class="info">Trụ sở: Số 14-16, ngõ 254 Đường Bưởi,&nbsp;P. Cống Vị Quận Ba Đình, Hà Nội</div>
         
-        <div class="info"><b>Điện thoại:</b> 0869 066 288</div>
-        
-        <div class="info"><b>Email:&nbsp;</b>info@relinesglobal.com</div>
+                                    <div class="info"><b>Điện thoại:</b> 0869 066 288</div>
+                                    
+                                    <div class="info"><b>Email:&nbsp;</b>info@relinesglobal.com</div>
         
         
                             </div>
         
                              <div class="c10"></div>
-                            <ul class="footer-social">
-        
-                                <li class="facebook  hvr-float">
-                                    <a href="https://www.facebook.com/hocbongvnu" class="footer-social__item">
-                                        <i class="fab fa-facebook-f"></i>
-                                    </a>
-                                </li>
-                                <li class="youtube  hvr-float">
-                                    <a href="#" class="footer-social__item">
-                                        <i class="fab fa-youtube"></i>
-                                    </a>
-                                </li>
-        
-                                <li class="instagram  hvr-float">
-                                    <a href="" class="footer-social__item">
-                                        <i class="fab fa-twitter"></i>
-                                    </a>
-                                </li>
-        
-                            </ul>
+                           
         
                         </div>
                        
@@ -1678,8 +1664,10 @@
                            
                             <div class="footer-block">
         
-        
-        
+                                <div class="footer-title footer-title-mobile menuboxfooter" rel="ct">
+                                   Danh mục sản phẩm
+                                </div>
+                             
                                 <ul class="menuboxfooter" id="boxcol5">
                                     <li><a href="/gioi-thieu-chung/"> Cây cảnh</a></li>
                                     <li><a href="/tam-nhin-chien-luoc/"> Bình hoa </a></li>
@@ -1694,7 +1682,9 @@
                         <div class="cell-1-4 tab-cell-1-1">
                         
                             <div class="footer-block">
-        
+                                <div class="footer-title footer-title-mobile menuboxfooter" rel="ct">
+                                    Điều khoản chính sách
+                                 </div>
         
         
                                 <ul class="menuboxfooter" id="boxcol5">
@@ -1709,11 +1699,39 @@
                         </div>
         
                         <div class="cell-1-4 tab-cell-1-1">
-                         
+                            
                             <div class="footer-block">
+                                <div class="footer-title footer-title-mobile menuboxfooter" rel="ct">
+                                    Theo dõi chúng tôi
+                                 </div>
+                                <ul class="footer-social">
+        
+                                    <li class="facebook  hvr-float">
+                                        <a href="https://www.facebook.com/hocbongvnu" class="footer-social__item">
+                                            <i class="fab fa-facebook-f"></i>
+                                        </a>
+                                    </li>
+                                    <li class="youtube  hvr-float">
+                                        <a href="#" class="footer-social__item">
+                                            <i class="fab fa-youtube"></i>
+                                        </a>
+                                    </li>
+            
+                                    <li class="instagram  hvr-float">
+                                        <a href="" class="footer-social__item">
+                                            <i class="fab fa-twitter"></i>
+                                        </a>
+                                    </li>
+                                    
+                                    <li class="instagram  hvr-float">
+                                        <a href="" class="footer-social__item">
+                                            <i class="fab fa-instagram"></i>
+                                        </a>
+                                    </li>
+                                    
+                                </ul>
                                 </div>
-                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fxanhvina2021&tabs&width=220&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-                        </div>
+                            </div>
         
                     </div>
                          <div class="c20"></div>
