--- a/template/sanphamchitiet.html
+++ b/template/sanphamchitiet.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/css/style1.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/style.css"/>
 
     <link rel="stylesheet" type="text/css" href="/css/grid.css"/>
 
@@ -212,12 +212,9 @@
             </script>
 
             </div>
-            <div class="grid">
-                <div class="grid">
-                    <div class="crumb"><div class="grid"><a href="/"> Trang chủ </a> <i class="fa fa-angle-right"></i> <a href="#">Cây giả</a></div><div class="c5"></div></div>
-                </div>
-               
-            </div>
+           
+            <div class="crumb"><div class="grid"><a href="/"> Trang chủ </a> <i class="fa fa-angle-right"></i> <a href="#">Cây giả</a></div><div class="c5"></div></div>
+             
             <div class="product-wrapper">
               <div class="grid">
                 <div class="flex-container flex-space-between">
@@ -225,16 +222,16 @@
                             <div class="swiper-container gallery-top" >
                                 <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                        <a href="/uploaded/san-pham/item1.jpg"  onclick="return hs.expand(this)" ><img src="/uploaded/san-pham/item1.jpg" alt="image title" width="100%" /></a>
+                                        <img src="/uploaded/san-pham/item1.jpg" alt="image title" width="100%" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <a href="/uploaded/san-pham/item2.jpg"  onclick="return hs.expand(this)" ><img src="/uploaded/san-pham/item2.jpg" alt="image title" width="100%" /></a>
+                                         <img src="/uploaded/san-pham/item2.jpg" alt="image title" width="100%" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <a href="/uploaded/san-pham/item3.jpg"  onclick="return hs.expand(this)" ><img src="/uploaded/san-pham/item3.jpg" alt="image title" width="100%" /></a>
+                                           <img src="/uploaded/san-pham/item3.jpg" alt="image title" width="100%" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <a href="/uploaded/san-pham/item4.jpg"  onclick="return hs.expand(this)" ><img src="/uploaded/san-pham/item4.jpg" alt="image title" width="100%" /></a>
+                                          <img src="/uploaded/san-pham/item4.jpg" alt="image title" width="100%" />
                                         </div> 
                                 </div>
                                 <div class="swiper-button-next swiper-button-black"></div>
@@ -306,17 +303,15 @@
                         <div class="c10"></div>
                        <div class="size">
                           
-                                <b style="float: left;">Kích thước:</b> 
+                                <b style="float: left;">Cây bạch đàn:</b> 
                              
                             <div class="size-item" data-price="3590000 " data-price-format="3590000 đ" data-price-with-format="3,590,000 đ"> 
-                                Lớn
+                               1m6 + chậu nhựa
                             </div>
                             <div class="size-item" data-price="290000 " data-price-format="290000 đ" data-price-with-format="3,590,000 đ"> 
-                               Vừa
+                              1m6 + chậu cói
                             </div>
-                            <div class="size-item" data-price="20000 " data-price-format="20000 đ" data-price-with-format="3,590,000 đ"> 
-                               Nhỏ
-                             </div>
+                            
                        </div>
                        <div class="c20"></div>
                        <div class="number">
@@ -330,6 +325,7 @@
                         <a class="addcart-btn" href="#"> <i class="fas fa-arrow-right"></i>   Mua hàng ngay </a>
                         <a class="buy-now" href="#"> <i class="fas fa-cart-plus"></i> Cho vào giỏ hàng </a>
                     </div>
+                    <p> <img src="/uploaded/logo/logo.png" alt="" width="40px"> <b style="color:#5b8651">Xanhvina</b> đảm bảo : 3 ngày trả hàng/hoàn tiền</p>
                     </div>
                     <div class="cell-1-1">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse aut temporibus optio earum facilis nulla sapiente fuga quaerat odit. Dignissimos pariatur atque iusto officiis ab molestiae nesciunt molestias sapiente suscipit?
